# GMX_v2_trades_data

./: .pre-commit-config.yaml  README.md  __main__.py  contract_abi.py  docker-compose.yaml  dockerfile  event_handler.py  logger.py  main.py  pyproject.toml  requirements.txt  trades_handler.py  web3_proxy.py  web3_utils.py
prisma/: schema.prisma
