[tool.poetry]
name = "parallel-trades"
version = "0.1.0"
description = ""
authors = ["hpadma <pharshith@deqode.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "3.5.0"
ray = "2.10.0"
web3 = "6.20.0"
prisma = "0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
